--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 <body>
     <h1>Welcome to Simon: A Memory Game</h1>
     <div class="simon">
-        <div class="row1">
+        <div class="row">
             <div id="red" class="button"></div>
             <div id="blue" class="button"></div>
         </div>
-        <div class="row2">
+        <div class="row">
             <div id="green" class="button"></div>
             <div id="yellow" class="button"></div>
         </div>
     </div>
-    <p>Score: 0</p>
-    <p>Your High Score: 0</p>
+    <div class="score">
+        <p>Score: 0</p>
+        <p>Your High Score: 0</p>
+    </div>
     <script src="app.js"></script>
 </body>
 
