Added light up animations when clicking on a button

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <h1>Welcome to Simon: A Memory Game</h1>
     <div class="simon">
         <div class="row">
-            <div id="red" class="button"></div>
-            <div id="blue" class="button"></div>
+            <button id="red" class="button"></button>
+            <button id="blue" class="button"></button>
         </div>
         <div class="row">
-            <div id="green" class="button"></div>
-            <div id="yellow" class="button"></div>
+            <button id="green" class="button"></button>
+            <button id="yellow" class="button"></button>
         </div>
     </div>
     <div class="score">
