--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <h1>Welcome to Simon: A Memory Game</h1>
+    <button class="play-button">Play</button>
     <div class="simon">
         <div class="row">
             <button id="red" class="button"></button>
