--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <button id="yellow" class="button"></button>
         </div>
     </div>
+    <div>
+        <button class="check">Check Answer</button>
+    </div>
     <div class="score">
         <p>Score: 0</p>
         <p>Your High Score: 0</p>
