Added some styling and javascript updates score and high score

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon Game</title>
     <link rel="stylesheet" href="styles.css">
+    
 </head>
 
 <body>
@@ -26,8 +27,8 @@
         <button class="check">Check Answer</button>
     </div>
     <div class="score">
-        <p>Score: 0</p>
-        <p>Your High Score: 0</p>
+        <p class="js-player-score">Score: 0</p>
+        <p class="js-high-score"> Your High Score: 0</p>
     </div>
     <script src="app.js"></script>
 </body>
