Fixed some timing for game

--- a/index.html
+++ b/index.html
@@ -11,8 +11,23 @@
 </head>
 
 <body>
+    <button id="show-instructions" class="modal-buttons">How To Play</button>
+    <div id="modal">
+        <div id="modal-textbox">
+            <h2>How To Play</h2>
+            <p>Simon is a memory game where you try and remember the sequence of signals that increases as you input the correct sequence.</p>
+            <p>To start, press the play button. Once you press the play button, a color will light up. Then it is your turn to click on the colored buttons. When you are done with your input, click the check button.</p>
+            <p>If you have input the sequence correctly, the colored sequence will automatically start again with an added color. If you are incorrect, you will be told you are wrong. You can press play to start the game again.</p>
+            <div>
+                <button class="modal-buttons" id="close" href="#">Close</button>
+            </div>
+        </div>    
+    </div>
     <h1>Welcome to Simon: A Memory Game</h1>
     <button class="play-button">Play</button>
+    <div>
+        
+    </div>
     <div class="simon">
         <div class="row">
             <button id="red" class="button"></button>
