Improved the directions visibility when playing the game

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1>Welcome to Simon: A Memory Game</h1>
     <button class="play-button">Play</button>
     <div>
-        <p class="directions">Watch Closely</p>
+        <p class="directions">Press Play to Start</p>
     </div>
     <div class="simon">
         <div class="row">
