Changed some css styling to body

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="game">
         <h1>Welcome to Simon: A Memory Game</h1>
         <button class="play-button">Play</button>
         <div>
